Fixing some scrollng issues, but the wait-until-content-loaded one .. Also stuck on finding out how to keep footer inside wrapper

--- a/css/main.css
+++ b/css/main.css
@@ -330,9 +330,9 @@ ul {
     background: #3e4557;
     text-align: center;
     height: 216px;
-    width: 100%;
     left: 0;
     position: fixed;
+    width: 100%;
 }
 
 .mail-us, .follow-us {
@@ -358,6 +358,10 @@ ul {
 .lower-footer a:hover {
     opacity: 1;
     text-decoration: underline;
+}
+
+.page6 .header img:first-child {
+    margin-top: 30px;
 }
 
 
